[package]
name = "pushmore"
description = "Easily send notifications to Telegram"
version = "0.1.2"
edition = "2018"
license = "MIT"
readme = "README.md"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/pushmore-rust-client"
homepage = "https://github.com/daniellockyer/pushmore-rust-client"
keywords = ["telegram", "notifications"]

[badges]
travis-ci = { repository = "neosilky/pushmore-rust-client" }

[dependencies]
ureq = "2.0"

[package.metadata.release]
sign-commit = true
sign-tag = true
no-dev-version = true
pre-release-commit-message = "v{{version}}"
